--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Conrat/tif-bundle",
+    "name": "conrat/tif-bundle",
     "type": "contao-bundle",
     "description": "Adds tif functionality to Contao",
     "homepage": "https://contao.org",
