--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -22,3 +22,11 @@ services:
     - { name: contao.frontend_module, category: dummy }
     - { name: container.service_subscriber }
     public: true
+  
+  Contao\TifBundle\EventListener\PostLoginListener:
+    arguments:
+      - "@contao.framework"
+      - "@session"
+      - Contao\BackendUser
+      - "@?logger"
+    public: true
